# SB1

./: .env.example  Dockerfile  README .md  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
buyrate/: admin.py  apps.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
buyrate/migrations/: 0001_initial.py
config/: settings.py  urls.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  conftest.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
